<resources xmlns:tools="http://schemas.android.com/tools">
	<string name="app_name" translatable="false">DexReader</string>
	<string name="local_storage">Local storage</string>
	<string name="favourites">Favourites</string>
	<string name="history">History</string>
	<string name="error_occurred">An error occurred</string>
	<string name="network_error">Network error</string>
	<string name="details">Details</string>
	<string name="chapters">Chapters</string>
	<string name="list">List</string>
	<string name="detailed_list">Detailed list</string>
	<string name="grid">Grid</string>
	<string name="list_mode">List mode</string>
	<string name="settings">Settings</string>
	<string name="remote_sources">Manga sources</string>
	<string name="loading_">Loading…</string>
	<string name="computing_">Computing…</string>
	<string name="chapter_d_of_d">Chapter %1$d of %2$d</string>
	<string name="close">Close</string>
	<string name="try_again">Try again</string>
	<string name="clear_history">Clear history</string>
	<string name="nothing_found">Nothing found</string>
	<string name="history_is_empty">No history yet</string>
	<string name="read">Read</string>
	<string name="you_have_not_favourites_yet">No favourites yet</string>
	<string name="add_to_favourites">Favourite this</string>
	<string name="add_new_category">New category</string>
	<string name="add">Add</string>
	<string name="save">Save</string>
	<string name="share">Share</string>
	<string name="create_shortcut">Create shortcut…</string>
	<string name="share_s">Share %s</string>
	<string name="search">Search</string>
	<string name="search_manga">Search manga</string>
	<string name="manga_downloading_">Downloading…</string>
	<string name="processing_">Processing…</string>
	<string name="download_complete">Downloaded</string>
	<string name="downloads">Downloads</string>
	<string name="by_name">Name</string>
	<string name="popular">Popular</string>
	<string name="updated">Updated</string>
	<string name="newest">Newest</string>
	<string name="by_rating">Rating</string>
	<string name="sort_order">Sorting order</string>
	<string name="filter">Filter</string>
	<string name="theme">Theme</string>
	<string name="light">Light</string>
	<string name="dark">Dark</string>
	<string name="follow_system">Follow system</string>
	<string name="pages">Pages</string>
	<string name="clear">Clear</string>
	<string name="text_clear_history_prompt">Clear all reading history permanently?</string>
	<string name="remove">Remove</string>
	<string name="_s_deleted_from_local_storage">\"%s\" deleted from local storage</string>
	<string name="save_page">Save page</string>
	<string name="page_saved">Saved</string>
	<string name="share_image">Share image</string>
	<string name="_import">Import</string>
	<string name="delete">Delete</string>
	<string name="operation_not_supported">This operation is not supported</string>
	<string name="text_file_not_supported">Either pick a ZIP or CBZ file.</string>
	<string name="no_description">No description</string>
	<string name="clear_pages_cache">Clear page cache</string>
	<string name="text_file_sizes">B|kB|MB|GB|TB</string>
	<string name="standard">Standard</string>
	<string name="webtoon">Webtoon</string>
	<string name="read_mode">Read mode</string>
	<string name="grid_size">Grid size</string>
	<string name="search_on_s">Search on %s</string>
	<string name="delete_manga">Delete manga</string>
	<string name="text_delete_local_manga">Permanently delete \"%s\" from device?</string>
	<string name="reader_settings">Reader settings</string>
	<string name="switch_pages">Switch pages</string>
	<string name="taps_on_edges">Edge taps</string>
	<string name="volume_buttons">Volume buttons</string>
	<string name="_continue">Continue</string>
	<string name="error">Error</string>
	<string name="clear_thumbs_cache">Clear thumbnails cache</string>
	<string name="clear_search_history">Clear search history</string>
	<string name="search_history_cleared">Cleared</string>
	<string name="gestures_only">Gestures only</string>
	<string name="internal_storage">Internal storage</string>
	<string name="external_storage">External storage</string>
	<string name="domain">Domain</string>
	<string name="app_update_available">A new version of the app is available</string>
	<string name="open_in_browser">Open in web browser</string>
	<string name="large_manga_save_confirm">This manga has %s. Save all of it?</string>
	<string name="save_manga">Save</string>
	<string name="notifications">Notifications</string>
	<string name="enabled_d_of_d" tools:ignore="PluralsCandidate">%1$d of %2$d on</string>
	<string name="new_chapters">New chapters</string>
	<string name="download">Download</string>
	<string name="notifications_settings">Notifications settings</string>
	<string name="notification_sound">Notification sound</string>
	<string name="light_indicator">LED indicator</string>
	<string name="vibration">Vibration</string>
	<string name="favourites_categories">Favourite categories</string>
	<string name="remove_category">Remove</string>
	<string name="text_empty_holder_primary">It\'s kind of empty here…</string>
	<string name="text_search_holder_secondary">Try to reformulate the query.</string>
	<string name="text_history_holder_primary">What you read will be displayed here</string>
	<string name="text_history_holder_secondary">Find what to read in the «Explore» section</string>
	<string name="text_shelf_holder_primary">Your manga will be displayed here</string>
	<string name="text_shelf_holder_secondary">Find what to read in the «Explore» section</string>
	<string name="text_local_holder_primary">Save something first</string>
	<string name="text_local_holder_secondary">Save something from an online catalog or import it from a file.</string>
	<string name="manga_shelf">Shelf</string>
	<string name="recent_manga">Recent</string>
	<string name="pages_animation">Page animation</string>
	<string name="manga_save_location">Downloads folder</string>
	<string name="not_available">Not available</string>
	<string name="cannot_find_available_storage">No available storage</string>
	<string name="other_storage">Other storage</string>
	<string name="done">Done</string>
	<string name="all_favourites">All favourites</string>
	<string name="favourites_category_empty">Empty category</string>
	<string name="read_later">Read later</string>
	<string name="updates">Updates</string>
	<string name="text_feed_holder">New chapters of what you are reading are shown here</string>
	<string name="search_results">Search results</string>
	<string name="new_version_s">New version: %s</string>
	<string name="size_s">Size: %s</string>
	<string name="clear_updates_feed">Clear updates feed</string>
	<string name="updates_feed_cleared">Cleared</string>
	<string name="rotate_screen">Rotate screen</string>
	<string name="update">Update</string>
	<string name="feed_will_update_soon">Feed update will start soon</string>
	<string name="track_sources">Look for updates</string>
	<string name="dont_check">Don\'t check</string>
	<string name="enter_password">Enter password</string>
	<string name="wrong_password">Wrong password</string>
	<string name="protect_application">Protect the app</string>
	<string name="protect_application_summary">Ask for password when starting DexReader</string>
	<string name="repeat_password">Repeat the password</string>
	<string name="passwords_mismatch">Mismatching passwords</string>
	<string name="about">About</string>
	<string name="app_version">Version %s</string>
	<string name="check_for_updates">Check for updates</string>
	<string name="no_update_available">No updates available</string>
	<string name="right_to_left">Right-to-left</string>
	<string name="create_category">New category</string>
	<string name="scale_mode">Scale mode</string>
	<string name="zoom_mode_fit_center">Fit center</string>
	<string name="zoom_mode_fit_height">Fit to height</string>
	<string name="zoom_mode_fit_width">Fit to width</string>
	<string name="zoom_mode_keep_start">Keep at start</string>
	<string name="black_dark_theme">Black</string>
	<string name="black_dark_theme_summary">Uses less power on AMOLED screens</string>
	<string name="backup_restore">Backup and restore</string>
	<string name="create_backup">Create data backup</string>
	<string name="restore_backup">Restore from backup</string>
	<string name="data_restored">Restored</string>
	<string name="preparing_">Preparing…</string>
	<string name="file_not_found">File not found</string>
	<string name="data_restored_success">All data was restored</string>
	<string name="data_restored_with_errors">The data was restored, but there are errors</string>
	<string name="backup_information">You can create backup of your history and favourites and restore it</string>
	<string name="just_now">Just now</string>
	<string name="yesterday">Yesterday</string>
	<string name="long_ago">Long ago</string>
	<string name="group">Group</string>
	<string name="today">Today</string>
	<string name="tap_to_try_again">Tap to try again</string>
	<string name="reader_mode_hint">The chosen configuration will be remembered for this manga</string>
	<string name="silent">Silent</string>
	<string name="captcha_required">CAPTCHA required</string>
	<string name="captcha_solve">Solve</string>
	<string name="clear_cookies">Clear cookies</string>
	<string name="cookies_cleared">All cookies were removed</string>
	<string name="clear_feed">Clear feed</string>
	<string name="text_clear_updates_feed_prompt">Clear all update history permanently?</string>
	<string name="check_for_new_chapters">Check for new chapters</string>
	<string name="reverse">Reverse</string>
	<string name="chapters_grid_view">Grid view</string>
	<string name="sign_in">Sign in</string>
	<string name="auth_required">Sign in to view this content</string>
	<string name="default_s">Default: %s</string>
	<string name="next">Next</string>
	<string name="protect_application_subtitle">Enter a password to start the app with</string>
	<string name="confirm">Confirm</string>
	<string name="password_length_hint">The password must be 4 characters or more</string>
	<string name="show_pages_numbers">Numbered pages</string>
	<string name="appearance">Appearance</string>
	<string name="bookmarks">Bookmarks</string>
	<string name="default_mode">Default mode</string>
	<string name="show_all">Show all</string>
	<string name="storage_usage">Storage usage</string>
	<string name="reader_info_bar">Show information bar in reader</string>
	<string name="reader_control_ltr_summary">Tapping on the right edge, or pressing the right key, always switches to the next page.</string>
	<string name="reader_control_ltr">Ergonomic reader control</string>
	<string name="show_in_grid_view">Show in grid view</string>
	<string name="services">Services</string>
	<string name="more">More</string>
	<string name="data_and_privacy">Data and privacy</string>
	<string name="restore_summary">Restore previously created backup</string>
	<string name="reader_info_bar_summary">Show the current time and reading progress at the top of the screen</string>
	<string name="show_pages_numbers_summary">Show page numbers in bottom corner</string>
	<string name="local_manga_directories">Local manga directories</string>
	<string name="description">Description</string>
	<string name="background">Background</string>
	<string name="reader_zoom_buttons">Show zoom buttons</string>
	<string name="reader_zoom_buttons_summary">Whether to show zoom control buttons in the bottom right corner</string>
	<string name="sources_catalog">Sources catalog</string>
	<string name="manage_sources">Manage sources</string>
	<string name="pages_saving">Saving pages</string>
	<string name="ask_for_dest_dir_every_time">Ask for the destination dir every time</string>
	<string name="default_page_save_dir">Default page save directory</string>
	<string name="preferred_download_format">Preferred download format</string>
	<string name="statistics">Statistics</string>
</resources>