<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto">

	<ListPreference
		android:entries="@array/reader_modes"
		android:key="reader_mode"
		android:title="@string/default_mode"
		app:useSimpleSummaryProvider="true" />

	<SwitchPreferenceCompat
		android:defaultValue="false"
		android:key="reader_zoom_buttons"
		android:summary="@string/reader_zoom_buttons_summary"
		android:title="@string/reader_zoom_buttons" />

	<SwitchPreferenceCompat
		android:defaultValue="false"
		android:key="reader_taps_ltr"
		android:summary="@string/reader_control_ltr_summary"
		android:title="@string/reader_control_ltr" />

	<ListPreference
		android:entries="@array/reader_animation"
		android:key="reader_animation2"
		android:title="@string/pages_animation"
		app:useSimpleSummaryProvider="true" />

	<SwitchPreferenceCompat
		android:defaultValue="true"
		android:key="reader_bar"
		android:summary="@string/reader_info_bar_summary"
		android:title="@string/reader_info_bar" />

	<ListPreference
		android:entries="@array/reader_backgrounds"
		android:key="reader_background"
		android:title="@string/background"
		app:useSimpleSummaryProvider="true" />

	<SwitchPreferenceCompat
		android:defaultValue="false"
		android:key="pages_numbers"
		android:summary="@string/show_pages_numbers_summary"
		android:title="@string/show_pages_numbers" />

</PreferenceScreen>
