<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto">

	<PreferenceCategory android:title="@string/backup_restore">

		<Preference
			android:key="backup"
			android:persistent="false"
			android:summary="@string/backup_information"
			android:title="@string/create_backup" />

		<Preference
			android:key="restore"
			android:persistent="false"
			android:summary="@string/restore_summary"
			android:title="@string/restore_backup" />

	</PreferenceCategory>

	<PreferenceCategory android:title="@string/storage_usage">

		<Preference
			android:key="search_history_clear"
			android:persistent="false"
			android:summary="@string/loading_"
			android:title="@string/clear_search_history"
			app:allowDividerAbove="true" />

		<Preference
			android:key="updates_feed_clear"
			android:persistent="false"
			android:summary="@string/loading_"
			android:title="@string/clear_updates_feed" />

	</PreferenceCategory>

</PreferenceScreen>
