<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto">

	<Preference
		android:key="local_manga_dirs"
		android:persistent="false"
		android:title="@string/local_manga_directories" />

	<Preference
		android:key="local_storage"
		android:persistent="false"
		android:title="@string/manga_save_location" />

	<ListPreference
		android:entries="@array/download_formats"
		android:key="downloads_format"
		android:title="@string/preferred_download_format"
		app:useSimpleSummaryProvider="true" />

	<PreferenceCategory android:title="@string/pages_saving">

		<Preference
			android:key="pages_dir"
			android:persistent="false"
			android:title="@string/default_page_save_dir" />

		<SwitchPreferenceCompat
			android:defaultValue="true"
			android:key="pages_dir_ask"
			android:title="@string/ask_for_dest_dir_every_time" />

	</PreferenceCategory>

</PreferenceScreen>
