<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
	xmlns:android="http://schemas.android.com/apk/res/android">

	<PreferenceScreen
		android:fragment="com.example.dexreader.settings.AppearanceSettingsFragment"
		android:icon="@drawable/ic_appearance"
		android:key="appearance"
		android:title="@string/appearance" />

	<PreferenceScreen
		android:fragment="com.example.dexreader.settings.sources.SourcesSettingsFragment"
		android:icon="@drawable/ic_manga_source"
		android:key="remote_sources"
		android:title="@string/remote_sources" />

	<PreferenceScreen
		android:fragment="com.example.dexreader.settings.ReaderSettingsFragment"
		android:icon="@drawable/ic_book_page"
		android:key="reader"
		android:title="@string/reader_settings" />

	<PreferenceScreen
		android:fragment="com.example.dexreader.settings.userdata.UserDataSettingsFragment"
		android:icon="@drawable/ic_data_privacy"
		android:key="userdata"
		android:title="@string/data_and_privacy" />

	<PreferenceScreen
		android:fragment="com.example.dexreader.settings.DownloadsSettingsFragment"
		android:icon="@drawable/ic_download"
		android:key="downloads"
		android:title="@string/downloads" />

	<PreferenceScreen
		android:fragment="com.example.dexreader.settings.tracker.TrackerSettingsFragment"
		android:icon="@drawable/ic_feed"
		android:key="tracker"
		android:title="@string/check_for_new_chapters" />

	<PreferenceScreen
		android:fragment="com.example.dexreader.settings.ServicesSettingsFragment"
		android:icon="@drawable/ic_services"
		android:key="services"
		android:title="@string/services" />

</PreferenceScreen>
