<?xml version="1.0" encoding="utf-8"?>
<menu
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto">

	<item
		android:id="@+id/action_favourite"
		android:icon="@drawable/ic_heart_outline"
		android:orderInCategory="10"
		android:title="@string/add_to_favourites"
		app:showAsAction="ifRoom" />

	<item
		android:id="@+id/action_save"
		android:orderInCategory="40"
		android:title="@string/download"
		android:visible="false"
		app:showAsAction="never" />

	<item
		android:id="@+id/action_delete"
		android:orderInCategory="40"
		android:title="@string/delete"
		android:visible="false"
		app:showAsAction="never" />

	<item
		android:id="@+id/action_stats"
		android:orderInCategory="50"
		android:title="@string/statistics"
		app:showAsAction="never" />

</menu>
